Added boilerplate content

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -38,8 +38,8 @@
                     </li>
                     <li>Service1</li>
                     <li>Service2</li>
-                    <li>Service4</li>
-                    <li>Service5</li>
+                    <li>Resources</li>
+                    <li>Sitemap</li>
                 </ul>
                 <ul>
                     <li>
@@ -69,8 +69,9 @@
     </div>
 
     <div class="credit">
-        <span>Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Your Company Name</a>
+        <span>Kenneth Ellis Designated Broker - 
+             Designed and Hand Coded by</span>
+        <a href="/" target="_blank" rel="noopener">Kolby Web Designs</a>
         <span class="copyright">
             Copyright {% year %} - Present</span>
     </div>
